updated all hard-coded image alt-tags

--- a/public-danny/back-end.html
+++ b/public-danny/back-end.html
@@ -20,7 +20,7 @@
             <div class="back-link-box">
                 <a href="resource-library.html">❮ Back</a>
             </div>
-            <img class="resource-header-image" src="../assets/images/Graph.png" alt="resources main image">
+            <img class="resource-header-image" src="../assets/images/Graph.png" alt="illustration of a graph">
             <h1 class="resource-header">BACK END RESOURCES</h1>
             <p>Everything you could ever want to know about user interfaces and experience is contained in the resource list below!</p>
         </div>
@@ -48,7 +48,7 @@
                                 <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Graph.png" alt="graph-icon">
+                                <img src="../assets/images/Graph.png" alt="resource-image">
                             </div>
                         </div>
                     </a>
@@ -62,7 +62,7 @@
                                 <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Front_end.png" alt="graph-icon">
+                                <img src="../assets/images/Front_end.png" alt="resource-image">
                             </div>
                         </div>
                     </a>
@@ -76,7 +76,7 @@
                                 <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/People.png" alt="graph-icon">
+                                <img src="../assets/images/People.png" alt="resource-image">
                             </div>
                         </div>
                     </a>
