--- a/public-danny/fun-stuff.html
+++ b/public-danny/fun-stuff.html
@@ -34,7 +34,7 @@
                                 <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/resources/rude-dog.png" alt="resource-image">
+                                <img src="../assets/resources/rude-dog.png" alt="resource image">
                             </div>
                         </div>
                     </a>
@@ -48,7 +48,7 @@
                                 <p class="owner-text">Submitted by: <span class="resource-owner">Jasim</span></p>
                             </div>
                             <div class="img-box">
-                                <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2Ff4MfHUyh.jpg" alt="css-battle-icon">
+                                <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2Ff4MfHUyh.jpg" alt="resource image">
                             </div>
                         </div>
                     </a>
@@ -62,7 +62,7 @@
                                 <p class="owner-text">Submitted by: <span class="resource-owner">Olivia</span></p>
                             </div>
                             <div class="img-box">
-                                <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2FR3NsSPkh.jpg" alt="graph-icon">
+                                <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2FR3NsSPkh.jpg" alt="resource image">
                             </div>
                         </div>
                     </a>
@@ -76,7 +76,7 @@
                                 <p class="owner-text">Submitted by: <span class="resource-owner">Martina</span></p>
                             </div>
                             <div class="img-box">
-                                <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2FRCnkT2Hh.jpg" alt="graph-icon">
+                                <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2FRCnkT2Hh.jpg" alt="resource image">
                             </div>
                         </div>
                     </a>
