--- a/public-danny/resource-library.html
+++ b/public-danny/resource-library.html
@@ -20,7 +20,7 @@
             <div class="back-link-box">
                 <a href="index.html">❮ Back</a>
             </div>
-            <img class="resource-header-image" src="../assets/images/Hand.png" alt="resources main image">
+            <img class="resource-header-image" src="../assets/images/Hand.png" alt="illustration of a man with big ideas">
             <h1 class="resource-header">RESOURCE LIBRARY</h1>
             <p>Our Resource Library relies on our users, like you! So please share all of your favourite links for everyone to enjoy.</p>
         </div>
@@ -33,7 +33,7 @@
                                 <div class="btn-description">Chat about anything. There's no rules in the Open Bar!</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Music.png" alt="graph-icon">
+                                <img src="../assets/images/Music.png" alt="lady listening to music illustration">
                             </div>
                         </div>
                     </a>
@@ -46,7 +46,7 @@
                                 <div class="btn-description">JS, Databases, APIs and everything in between.</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Graph.png" alt="graph-icon">
+                                <img src="../assets/images/Graph.png" alt="illustration of a graph">
                             </div>
                         </div>
                     </a>
@@ -59,7 +59,7 @@
                                 <div class="btn-description">From CSS and HTML all the way to Frameworks, we've got you covered.</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Front_end.png" alt="graph-icon">
+                                <img src="../assets/images/Front_end.png" alt="illustration of a phone">
                             </div>
                         </div>
                     </a>
@@ -72,7 +72,7 @@
                                 <div class="btn-description">Delve deep into the design experience with those in the know!</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Pencil.png" alt="graph-icon">
+                                <img src="../assets/images/Pencil.png" alt="illustration of a pencil">
                             </div>
                         </div>
                     </a>
