--- a/public-danny/index.html
+++ b/public-danny/index.html
@@ -30,7 +30,7 @@
                                     <div class="btn-description">A library of resources to support your learning</div>
                                 </div>
                                 <div class="img-box">
-                                    <img src="../assets/images/Music.png" alt="graph-icon">
+                                    <img src="../assets/images/Music.png" alt="lady wearing headphones illustration">
                                 </div>
                             </div>
                         </div>
@@ -44,7 +44,7 @@
                                 <div class="btn-description">Chat about anything. There's no rules in the Open Bar!</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/People.png" alt="graph-icon">
+                                <img src="../assets/images/People.png" alt="people illustration">
                             </div>
                         </div>
                     </a>
@@ -57,7 +57,7 @@
                                 <div class="btn-description">JS, Databases, APIs and everything in between.</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Graph.png" alt="graph-icon">
+                                <img src="../assets/images/Graph.png" alt="graph illustration">
                             </div>
                         </div>
                     </a>
@@ -70,7 +70,7 @@
                                 <div class="btn-description">From CSS and HTML all the way to Frameworks, we've got you covered.</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Front_end.png" alt="graph-icon">
+                                <img src="../assets/images/Front_end.png" alt="phone illustration">
                             </div>
                         </div>
                     </a>
@@ -83,7 +83,7 @@
                                 <div class="btn-description">Delve deep into the design experience with those in the know!</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/People.png" alt="graph-icon">
+                                <img src="../assets/images/Pencil.png" alt="pencil illustration">
                             </div>
                         </div>
                     </a>
