corrected copy on submit form

--- a/public-danny/index.html
+++ b/public-danny/index.html
@@ -17,7 +17,7 @@
     </nav>
     <main>
         <div id="welcome-box">
-            <h1>WELCOME TO STUDY BUDDY!</h1>
+            <h1 class="resource-header">WELCOME TO STUDY BUDDY!</h1>
             <p>Below you will find some open study rooms where you can find new study buddies. Or, if you want to find some resources to supplement your learning, check our the Resource Library</p>
         </div>
             <ul>
@@ -30,7 +30,7 @@
                                     <div class="btn-description">A library of resources to support your learning</div>
                                 </div>
                                 <div class="img-box">
-                                    <img src="../assets/images/Music.png" alt="lady wearing headphones illustration">
+                                    <img src="../assets/images/Hand.png" alt="illustration of a man with big ideas">
                                 </div>
                             </div>
                         </div>
