--- a/public-danny/front-end.html
+++ b/public-danny/front-end.html
@@ -88,7 +88,7 @@
         <form id="newRes">
             <h2>SUBMIT A RESOURCE</h2>
             <label for="title">Title:</label>
-            <input id="title" type="text" placeholder="Enter a title title...">
+            <input id="title" type="text" placeholder="Enter a title...">
             <label for="link">Link:</label>
             <input id="link" type="text" placeholder="Provide a link to your resource...">
             <label for="image-url">Image URL:</label>
