added logic to resource pages

--- a/public-danny/back-end.html
+++ b/public-danny/back-end.html
@@ -24,64 +24,8 @@
             <h1 class="resource-header">BACK END RESOURCES</h1>
             <p>Everything you could ever want to know about user interfaces and experience is contained in the resource list below!</p>
         </div>
-            <ul>
-                <li>
-                    <a href="https://www.youtube.com/watch?v=Djz6sfWGmgM" class="body-link">
-                        <div class="open-bar-btn btn">
-                            <div class="btn-text-container">
-                                <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
-                                <div class="btn-description">Here are a few of my favourite tunes to share.</div>
-                                <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
-                            </div>
-                            <div class="img-box">
-                                <img src="../assets/resources/rude-dog.png" alt="resource-image">
-                            </div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="/" class="body-link">
-                        <div class="back-end-btn btn">
-                            <div class="btn-text-container">
-                                <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
-                                <div class="btn-description">Here are a few of my favourite tunes to share.</div>
-                                <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
-                            </div>
-                            <div class="img-box">
-                                <img src="../assets/images/Graph.png" alt="resource-image">
-                            </div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="/" class="body-link">
-                        <div class="front-end-btn btn">
-                            <div class="btn-text-container">
-                                <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
-                                <div class="btn-description">Here are a few of my favourite tunes to share.</div>
-                                <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
-                            </div>
-                            <div class="img-box">
-                                <img src="../assets/images/Front_end.png" alt="resource-image">
-                            </div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="/" class="body-link">
-                        <div class="ui-ux-btn btn">
-                            <div class="btn-text-container">
-                                <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
-                                <div class="btn-description">Here are a few of my favourite tunes to share.</div>
-                                <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
-                            </div>
-                            <div class="img-box">
-                                <img src="../assets/images/People.png" alt="resource-image">
-                            </div>
-                        </div>
-                    </a>
-                </li>
-            </ul>
+        <ul id="root">
+        </ul>
             <div class="submit-resource-button body-link" onclick="files()"></div>
     </main>
     <div class="form-container">
@@ -101,5 +45,6 @@
     </div>
     <footer></footer>
     <script src="main.js"></script>
+    <script src="./apiCalls/backEnd.js"></script>
 </body>
 </html>
