--- a/public-danny/fun-stuff.html
+++ b/public-danny/fun-stuff.html
@@ -24,64 +24,8 @@
             <h1 class="resource-header">FUN STUFF</h1>
             <p>Below you will find some open study rooms where you can find new study buddies. Or, if you want to find some resources to supplement your learning, check our the Resource Library</p>
         </div>
-            <ul>
-                <li>
-                    <a href="https://www.youtube.com/watch?v=Djz6sfWGmgM" class="body-link">
-                        <div class="open-bar-btn btn">
-                            <div class="btn-text-container">
-                                <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
-                                <div class="btn-description">Here are a few of my favourite tunes to share.</div>
-                                <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
-                            </div>
-                            <div class="img-box">
-                                <img src="../assets/resources/rude-dog.png" alt="resource image">
-                            </div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://cssbattle.dev/" class="body-link">
-                        <div class="back-end-btn btn">
-                            <div class="btn-text-container">
-                                <div class="btn-header">CSS BATTLE: Where Pixels and Pizzazz Collide!</div>
-                                <div class="btn-description">Welcome to our favourite quirkiest online showdown in the digital universe! In the exhilarating world of Cascading Style Sheets Battle, you're not just battling code; you're fighting for pixel perfection and ultimate supremacy.</div>
-                                <p class="owner-text">Submitted by: <span class="resource-owner">Jasim</span></p>
-                            </div>
-                            <div class="img-box">
-                                <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2Ff4MfHUyh.jpg" alt="resource image">
-                            </div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.laughfactory.com/jokes" class="body-link">
-                        <div class="front-end-btn btn">
-                            <div class="btn-text-container">
-                                <div class="btn-header">JOKE OF THE DAY</div>
-                                <div class="btn-description">Welcome to 'JOKE of the Day' - the daily dose of laughter you didn't know you needed! </div>
-                                <p class="owner-text">Submitted by: <span class="resource-owner">Olivia</span></p>
-                            </div>
-                            <div class="img-box">
-                                <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2FR3NsSPkh.jpg" alt="resource image">
-                            </div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://mytuner-radio.com/radio/country/united-kingdom/genre/comedy-stations" class="body-link">
-                        <div class="ui-ux-btn btn">
-                            <div class="btn-text-container">
-                                 <div class="btn-header">RADIO RASCALS</div>
-                                <div class="btn-description">"Welcome to Radio Rascals, the station that's here to tickle your eardrums and your funny bone simultaneously!</div>
-                                <p class="owner-text">Submitted by: <span class="resource-owner">Martina</span></p>
-                            </div>
-                            <div class="img-box">
-                                <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2FRCnkT2Hh.jpg" alt="resource image">
-                            </div>
-                        </div>
-                    </a>
-                </li>
-            </ul>
+        <ul id="root">
+        </ul>
             <div class="submit-resource-button body-link" onclick="files()"></div>
     </main>
     <div class="form-container">
@@ -101,5 +45,6 @@
     </div>
     <footer></footer>
     <script src="main.js"></script>
+    <script src="./apiCalls/funStuff.js"></script>
 </body>
 </html>
