--- a/public-danny/ui-ux.html
+++ b/public-danny/ui-ux.html
@@ -24,63 +24,7 @@
             <h1 class="resource-header">UI &amp; UX DESIGN RESOURCES</h1>
             <p>Everything you could ever want to know about user interfaces and experience is contained in the resource list below!</p>
         </div>
-        <ul>
-            <li>
-                <a href="https://www.youtube.com/watch?v=Djz6sfWGmgM" class="body-link">
-                    <div class="open-bar-btn btn">
-                        <div class="btn-text-container">
-                            <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
-                            <div class="btn-description">Here are a few of my favourite tunes to share.</div>
-                            <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
-                        </div>
-                        <div class="img-box">
-                            <img src="../assets/resources/rude-dog.png" alt="resource-image">
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="/" class="body-link">
-                    <div class="back-end-btn btn">
-                        <div class="btn-text-container">
-                            <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
-                            <div class="btn-description">Here are a few of my favourite tunes to share.</div>
-                            <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
-                        </div>
-                        <div class="img-box">
-                            <img src="../assets/resources/rude-dog.png" alt="resource-image">
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="/" class="body-link">
-                    <div class="front-end-btn btn">
-                        <div class="btn-text-container">
-                            <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
-                            <div class="btn-description">Here are a few of my favourite tunes to share.</div>
-                            <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
-                        </div>
-                        <div class="img-box">
-                            <img src="../assets/resources/rude-dog.png" alt="resource-image">
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="/" class="body-link">
-                    <div class="ui-ux-btn btn">
-                        <div class="btn-text-container">
-                            <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
-                            <div class="btn-description">Here are a few of my favourite tunes to share.</div>
-                            <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
-                        </div>
-                        <div class="img-box">
-                            <img src="../assets/resources/rude-dog.png" alt="resource-image">
-                        </div>
-                    </div>
-                </a>
-            </li>
+        <ul id="root">
         </ul>
         <div class="submit-resource-button body-link" onclick="files()"></div>
     </main>
@@ -100,5 +44,7 @@
         </form>
     </div>
     <footer></footer>
+    <script src="main.js"></script>
+    <script src="./apiCalls/UX.js"></script>
 </body>
 </html>
