--- a/public-danny/login.html
+++ b/public-danny/login.html
@@ -43,6 +43,6 @@
         <button type="button" class="close">close</button>
     </div>
     <footer></footer>
-    <script src="login.js"></script>
+    <script src="./apiCalls/login.js"></script>
 </body>
 </html>
