updated Open bar link and github icon margin

--- a/public-danny/index.html
+++ b/public-danny/index.html
@@ -37,7 +37,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/">
+                    <a href="https://meet.google.com/ign-isci-oqa" target="_blank">
                         <div class="open-bar-btn btn">
                             <div class="btn-text-container">
                                 <div class="btn-header">OPEN BAR</div>
