added ids for submit button and back button

--- a/public-danny/back-end.html
+++ b/public-danny/back-end.html
@@ -18,7 +18,7 @@
     <main id="main">
         <div id="resource-box">
             <div class="back-link-box">
-                <a href="resource-library.html" class="body-link">❮ Back</a>
+                <a href="resource-library.html" class="body-link" id="back-button">❮ Back</a>
             </div>
             <img class="resource-header-image" src="../assets/images/Graph.png" alt="illustration of a graph">
             <h1 class="resource-header">BACK END RESOURCES</h1>
@@ -26,7 +26,7 @@
         </div>
         <ul id="root">
         </ul>
-            <div class="submit-resource-button body-link" onclick="files()"></div>
+            <div id="submit-button" class="submit-resource-button body-link" onclick="files()"></div>
     </main>
     <div class="form-container">
         <form id="newRes">
