--- a/public-danny/ui-ux.html
+++ b/public-danny/ui-ux.html
@@ -18,7 +18,7 @@
     <main>
         <div id="resource-box">
             <div class="back-link-box">
-                <a href="resource-library.html" class="body-link">❮ Back</a>
+                <a href="resource-library.html" class="body-link" id="back-button">❮ Back</a>
             </div>
             <img class="resource-header-image" src="../assets/images/Pencil.png" alt="resources main image">
             <h1 class="resource-header">UI &amp; UX DESIGN RESOURCES</h1>
@@ -26,7 +26,7 @@
         </div>
         <ul id="root">
         </ul>
-        <div class="submit-resource-button body-link" onclick="files()"></div>
+        <div id="submit-button" class="submit-resource-button body-link" onclick="files()"></div>
     </main>
     <div class="form-container">
         <form id="newRes">
