--- a/public-danny/login.html
+++ b/public-danny/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="login.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Rubik:wght@400;600&family=Unica+One&display=swap" rel="stylesheet">
     <title>Study Buddy App</title>
 </head>
@@ -31,6 +31,8 @@
         <input type="text" id="userNameIn">
         <label for="passwordIn">Password</label>
         <input type="password" id="passwordIn">
+        <label for="imgLink">Profile image link </label>
+        <input type="text" id="imgLink">
         <button type="submit" class="newUser">Submit</button>
         <button type="button" onclick="register()">Cancel</button>
     </form>
