updated alt tags and deleted styles2.css

--- a/public-danny/login.html
+++ b/public-danny/login.html
@@ -11,7 +11,7 @@
 
     <main class="loginMain">
         <div>
-            <img src="/assets//images/Logo.png" width="300px">
+            <img src="/assets//images/Logo.png" width="300px" alt="study buddy illustration">
         </div>
         <form id="logInData">
             <label for="userName">User Name</label>
