--- a/public-danny/ui-ux.html
+++ b/public-danny/ui-ux.html
@@ -12,7 +12,7 @@
         <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
         <div id="user-info">
             <p id="username">User_777</p>
-            <div id="profile-pic">U</div>
+            <div id="profile-pic"></div>
         </div>
     </nav>
     <main>
