--- a/public-danny/login.html
+++ b/public-danny/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+    <!-- <link rel="stylesheet" href="styles.css"> -->
     <link rel="stylesheet" href="login.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Rubik:wght@400;600&family=Unica+One&display=swap" rel="stylesheet">
     <title>Study Buddy App</title>
@@ -20,8 +20,8 @@
             <label for="password">Password</label>
             <input id="password" type="password" placeholder="Enter password...">
             <button type="submit" class="logInbtn">Login</button>
+            <button type="button" class="register" onclick="register()">Register</button>
         </form>
-        <button type="button" class="register" onclick="register()"> Register</button>
     </main>
     <form id="newUser" class="newUserHide">
         <label for="fullName">Full Name</label>
@@ -38,6 +38,8 @@
         <button type="button" onclick="register()">Cancel</button>
     </form>
     <div class="popUp">
+        <!-- <h2>Welcome Olivia!</h2>
+       <button type="button" >continue</button> -->
     </div>
     <div id="notFound" class="notFound continue">
         <h2>User not found</h2>
