updated input tag

--- a/public-danny/login.html
+++ b/public-danny/login.html
@@ -15,10 +15,10 @@
             <img src="/assets//images/Logo.png" width="300px" alt="study buddy illustration">
         </div>
         <form id="logInData">
-            <label for="userName">User Name</label>
-            <input id="userName" type="text" placeholder="Enter username...">
-            <label for="password">Password</label>
-            <input id="password" type="password" placeholder="Enter password...">
+            <label for="userName">Username:</label>
+            <input id="userName" aria-label="Username" type="text" placeholder="Enter username">
+            <label for="password">Password:</label>
+            <input id="password" type="password" placeholder="Enter password">
             <button type="submit" class="logInbtn">Login</button>
             <button type="button" class="register" onclick="register()">Register</button>
         </form>
