updated login styling

--- a/public-danny/login.html
+++ b/public-danny/login.html
@@ -37,9 +37,8 @@
         <button type="submit" class="newUser">Submit</button>
         <button type="button" onclick="register()">Cancel</button>
     </form>
+    <!-- Needed for login -->
     <div class="popUp">
-        <!-- <h2>Welcome Olivia!</h2>
-       <button type="button" >continue</button> -->
     </div>
     <div id="notFound" class="notFound continue">
         <h2>User not found</h2>
