--- a/public-danny/front-end.html
+++ b/public-danny/front-end.html
@@ -6,13 +6,15 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Rubik:wght@400;600&family=Unica+One&display=swap" rel="stylesheet">
     <title>Study Buddy App</title>
+    <style id="userImage">
+        
+    </style>
 </head>
 <body>
     <nav>
         <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
         <div id="user-info">
-            <p id="username">User_777</p>
-            <div id="profile-pic"></div>
+
         </div>
     </nav>
     <main id="main">
@@ -46,5 +48,6 @@
     <footer></footer>
     <script src="main.js"></script>
     <script src="./apiCalls/frontEnd.js"></script>
+    <script src="userData.js"></script>
 </body>
 </html>
