--- a/public-danny/resource-library.html
+++ b/public-danny/resource-library.html
@@ -6,13 +6,15 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Rubik:wght@400;600&family=Unica+One&display=swap" rel="stylesheet">
     <title>Study Buddy App</title>
+    <style id="userImage">
+        
+    </style>
 </head>
 <body>
     <nav>
         <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
         <div id="user-info">
-            <p id="username">User_777</p>
-            <div id="profile-pic">U</div>
+         
         </div>
     </nav>
     <main>
@@ -80,5 +82,6 @@
             </ul>
     </main>
     <footer></footer>
+    <script src="userData.js"></script>
 </body>
 </html>
