--- a/public-danny/ui-ux.html
+++ b/public-danny/ui-ux.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Rubik:wght@400;600&family=Unica+One&display=swap" rel="stylesheet">
     <title>Study Buddy App</title>
+    <style id="userImage">
+        
+    </style>
 </head>
 <body>
     <nav>
@@ -46,5 +49,6 @@
     <footer></footer>
     <script src="main.js"></script>
     <script src="./apiCalls/UX.js"></script>
+    <script src="userData.js"></script>
 </body>
 </html>
