--- a/public-danny/user-page.html
+++ b/public-danny/user-page.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Rubik:wght@400;600&family=Unica+One&display=swap" rel="stylesheet">
     <title>Study Buddy App</title>
+    <style id="userImage">
+        
+    </style>
 </head>
 <body>
     <nav>
@@ -36,5 +39,6 @@
         </div>
     </main>
     <footer></footer>
+    <script src="userData.js"></script>
 </body>
 </html>
