added logout button

--- a/public-danny/fun-stuff.html
+++ b/public-danny/fun-stuff.html
@@ -44,7 +44,9 @@
             <button id="form-submit-button" type="submit">Submit</button>
         </form>
     </div>
-    <footer></footer>
+    <footer>
+       <button id="log-out-btn" type="button" onclick="logOut(); window.location.href='login.html';">Log Out</button>
+    </footer>
     <script src="main.js"></script>
     <script src="./apiCalls/funStuff.js"></script>
     <script src="userData.js"></script>
