added logout link

--- a/public-danny/fun-stuff.html
+++ b/public-danny/fun-stuff.html
@@ -45,7 +45,7 @@
         </form>
     </div>
     <footer>
-       <button id="log-out-btn" type="button" onclick="logOut(); window.location.href='login.html';">Log Out</button>
+       <a id="log-out-btn" onclick="logOut(); window.location.href='login.html';">Log Out</a>
     </footer>
     <script src="main.js"></script>
     <script src="./apiCalls/funStuff.js"></script>
