--- a/public-danny/index.html
+++ b/public-danny/index.html
@@ -91,7 +91,9 @@
                 </li>
             </ul>
     </main>
-    <footer></footer>
+    <footer>
+        <a id="log-out-btn" onclick="logOut(); window.location.href='login.html';">Log Out</a>
+    </footer>
     <script src="userData.js"></script>
 </body>
 </html>
