--- a/public-danny/user-page.html
+++ b/public-danny/user-page.html
@@ -38,7 +38,9 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <a id="log-out-btn" onclick="logOut(); window.location.href='login.html';">Log Out</a>
+    </footer>
     <script src="userData.js"></script>
     <script src="./apiCalls/userPage.js"></script>
 </body>
