--- a/public-danny/ui-ux.html
+++ b/public-danny/ui-ux.html
@@ -46,7 +46,9 @@
             <button id="form-submit-button" type="submit">Submit</button>
         </form>
     </div>
-    <footer></footer>
+    <footer>
+        <a id="log-out-btn" onclick="logOut(); window.location.href='login.html';">Log Out</a>
+    </footer>
     <script src="main.js"></script>
     <script src="./apiCalls/UX.js"></script>
     <script src="userData.js"></script>
