removed auto fill on forms

--- a/public-danny/front-end.html
+++ b/public-danny/front-end.html
@@ -31,7 +31,7 @@
         <div id="submit-button" class="submit-resource-button body-link" onclick="files()"></div>
     </main>
     <div class="form-container">
-        <form id="newRes">
+        <form id="newRes" autocomplete="off">
             <h2>SUBMIT A RESOURCE</h2>
             <label for="title">Title:</label>
             <input id="title" type="text" placeholder="Enter a title...">
