--- a/public-danny/login.html
+++ b/public-danny/login.html
@@ -14,7 +14,7 @@
         <div>
             <img src="/assets//images/Logo.png" width="300px" alt="study buddy illustration">
         </div>
-        <form id="logInData">
+        <form id="logInData" autocomplete="off">
             <label for="userName">Username:</label>
             <input id="userName" aria-label="Username" type="text" placeholder="Enter username">
             <label for="password">Password:</label>
@@ -23,7 +23,7 @@
             <button type="button" class="register" onclick="register()">Register</button>
         </form>
     </main>
-    <form id="newUser" class="newUserHide">
+    <form id="newUser" class="newUserHide" autocomplete="off">
         <label for="fullName">Full Name</label>
         <input type="text" id="fullName">
         <label for="email">Email</label>
