moved public folder

--- a/server/public/login.html
+++ b/server/public/login.html
@@ -12,7 +12,7 @@
 
     <main class="loginMain">
         <div>
-            <img src="/assets//images/Logo.png" width="300px" alt="study buddy illustration">
+            <img src="/assets/images/Logo.png" width="300px" alt="study buddy illustration">
         </div>
         <form id="logInData" autocomplete="off">
             <label for="userName">Username:</label>
