--- a/server/public/back-end.html
+++ b/server/public/back-end.html
@@ -48,8 +48,8 @@
     <footer>
         <a id="log-out-btn" onclick="logOut(); window.location.href='login.html';">Log Out</a>
     </footer>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
     <script src="./apiCalls/backEnd.js"></script>
-    <script src="userData.js"></script>
+    <script src="./userData.js"></script>
 </body>
 </html>
