--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Rubik:wght@400;600&family=Unica+One&display=swap" rel="stylesheet">
-    <style id="userImage">
-        
-    </style>
+    <style id="userImage"></style>
     <title>Study Buddy App</title>
 </head>
 <body>
